--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,8 @@ body {
     align-items: center;
 }
 .logo {
+    position: absolute;
+    left: 150px;
     font-weight: 700;
     color: #0f7bff;
     font-size: 36px;
@@ -55,13 +57,22 @@ body {
     transition: color .2s linear;
 }
 #header nav {
-    margin-left: 900px;
+    position: absolute;
+    right: 400px;
 }
 #header nav a:hover {
     color: #0f7bff;
     transition: color .2s linear;
 }
+.burger {
+    display: none;
+    position: absolute;
+    right: 350px;
+    cursor: pointer;
+}
 .SignUp {
+    position: absolute;
+    right: 150px;
     background-color: #0f7bff;
     color: white;
     text-transform: uppercase;
@@ -109,6 +120,27 @@ body {
     border-radius: 5px;
     margin-top: 40px;
 }
+.underInput {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+.underInput1 {
+    margin-left: 200px;
+    color: #0f7bff;
+    font-weight: 400;
+    cursor: pointer;
+    font-size: 12px;
+}
+.underInput2 {
+    margin-right: 200px;
+    color: #0f7bff;
+    font-weight: 400;
+    cursor: pointer;
+    font-size: 12px;
+}
 form {
     display: flex;
     justify-content: center;
@@ -138,30 +170,6 @@ input[type=submit] {
     margin-top: 30px;
     cursor: pointer;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 #AboutUs {
     height: 450px;
@@ -282,4 +290,184 @@ input[type=submit] {
 }
 .scrollToTop a {
     cursor: pointer;
+}
+@media (max-width: 1600px) {
+
+    .n {
+        margin-left: 300px;
+    }
+    .scrollToTop {
+        margin-right: 50px;
+    }
+}
+@media (max-width: 1366px) {
+    .logo {
+        left: 100px;
+    }
+    .SignUp {
+        right: 100px;
+    }
+    #header nav {
+        left: 600px;
+    }
+    .n {
+        margin-left: 300px;
+    }
+    .scrollToTop {
+        margin-right: 50px;
+    }
+}
+
+@media (max-width: 1030px) {
+    .logo {
+        left: 60px;
+    }
+    .SignUp {
+        right: 60px;
+    }
+    .burger {
+        right: 270px;
+    }
+    #header nav a {
+        display: none;
+    }
+    .burger {
+        display: block;
+    }
+    .sq1 {
+        margin-left: -70px;
+    }
+    .n {
+        margin-left: 150px;
+    }
+}
+@media (max-width: 768px) {
+    body {
+        font-size: 14px;
+    }
+    .centerText {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+    .centerText h3{
+        font-size: 28px;
+    }
+    .centerText div {
+        font-size: 14px;
+    }
+    #AboutUs {
+        height: 500px;
+        flex-direction: column;
+    }
+    .sq1 {
+        margin-left: -155px;
+        margin-top: 50px;
+    }
+    .AboutUsTitle h3 {
+        font-size: 28px;
+    }
+
+    .list1 h3 {
+        font-size: 16px;
+    }
+    .list1 div {
+        font-size: 14px;
+    }
+    .scrollToTop {
+        display: none;
+    }
+    .n {
+        margin-left: 90px;
+    }
+    .start1, .start2 {
+        margin-left: 20px;
+    }
+}
+@media (max-width: 414px) {
+    body {
+        font-size: 9px;
+    }
+    .logo {
+        left: 15px;
+        font-size: 23px;
+    }
+    .SignUp {
+        padding: 10px 30px;
+        right: 15px;
+        font-size: 11px;
+    }
+    .burger {
+        right: 150px;
+    }
+    #main {
+        height: 820px;
+    }
+    .centerText h3 {
+        font-size: 23px;
+    }
+    .centerText div {
+        font-size: 9px;
+    }
+    .buttons a {
+        font-size: 11px;
+        width: 100px;
+        height: 50px;
+    }
+    form input {
+        font-size: 9px;
+        width: 260px;
+        height: 50px;
+    }
+
+    input[type="submit"] {
+        font-size: 11px;
+        width: 100px;
+        height: 50px;
+    }
+    .underInput1 {
+        font-size: 9px;
+        margin-left: 80px;
+    }
+    .underInput2 {
+        font-size: 9px;
+        margin-right: 80px;
+    }
+    #AboutUs {
+        height: 300px;
+    }
+    .AboutUsTitle {
+        display: none;
+    }
+    .sq1 {
+        margin-left: -55px;
+        margin-top: 0;
+    }
+    .list1 {
+        margin-left: 55px;
+    }
+    .list1 h3 {
+        font-size: 11px;
+    }
+    .list1 div {
+        font-size: 9px;
+    }
+    .e {
+        flex-direction: column;
+    }
+    .n {
+        margin-left: 0;
+        margin-top: 10px;
+    }
+    .start1 {
+        margin-left: 5px;
+    }
+    .start2 {
+        margin-left: 5px;
+    }
+    .underInput {
+        font-size: 9px;
+    }
+    .underInput1 {
+        font-size: 9px;
+    }
 }
